{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 44,
  "lineage": "3452f965-4e3d-3a3f-4426-fc90c7367575",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-15T22:27:46.522-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/inbooud",
            "log_config": [],
            "name": "inbooud",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1000,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/inbooud",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-15T22:27:46.301-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/outbooud",
            "log_config": [],
            "name": "outbooud",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1000,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/outbooud",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230429",
                    "labels": {
                      "my_label": "ubuntu-machine"
                    },
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/ubuntu-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/ubuntu-instance",
            "instance_id": "7856780675524766347",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "dev": "front-end"
            },
            "metadata_fingerprint": "D_TH_1M8Jtw=",
            "name": "ubuntu-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.169.11",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/ubuntu-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "front-end"
            ],
            "tags_fingerprint": "cxBUMFZ4G10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.dev-snw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "mtu": 1430,
            "name": "dev-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev-snw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-15T22:27:47.393-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    }
  ]
}